tests/ValidPrograms/Test16/test16.c
int main(){
	int a=3;
	if(1){
		int a;
		a=5;
	}
	return a;
}
