tests/SemanticError/Fonctions/Test4/NoMain.c
void fonction(){
	int a=3;
}
